[532988] Fine-tuning of p2 repository
 * Moved viewers tooling into SDK
 * Updated source feature naming
 * Removed extensions feature source from repository

Change-Id: I3f1564de8519b56e1f5f15d84c08e9e240132a86

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -54,6 +54,14 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.eclipse.tycho.extras</groupId>
+                <artifactId>tycho-source-feature-plugin</artifactId>
+                <version>${tycho.version}</version>
+                <configuration>
+                    <labelSuffix></labelSuffix>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
                 <version>1.4</version>
