[531193] Document the new Pattern Parser API
This change initializes an example project where code snippets can be
introduced for the documentation that are built with every change of the
source code and used the created patterns and executable code to
demonstrate the features of VIATRA.

Change-Id: Ia68b28a12825827459cf0e2dc8965c4f9ade51e2
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -66,6 +66,7 @@
 		<module>../../integration/features/org.eclipse.viatra.integration.uml.feature</module>
 
 		<!-- Documentation -->
+		<module>../../documentation/org.eclipse.viatra.documentation.example</module>
 		<module>../../documentation/org.eclipse.viatra.documentation.help</module>
 		<module>../../releng/org.eclipse.viatra.docs</module>
 
