[530701] Documenting and finalizing language extension support

--- a/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries/pom.xml
@@ -49,8 +49,8 @@
                     <dependencies>
                     <dependency>
                         <groupId>org.eclipse.viatra</groupId>
-                        <artifactId>org.eclipse.viatra.addons.validation.runtime.validation</artifactId>
-                        <version>${viatra.incubation.version}</version>
+                        <artifactId>viatra-query-language-extensions</artifactId>
+                        <version>${viatra.main.version}</version>
                     </dependency>
                 </dependencies>
                 </configuration>
