[releng] Configure test source folders for Sonar

--- a/transformation/tests/org.eclipse.viatra.transformation.evm.tests/pom.xml
+++ b/transformation/tests/org.eclipse.viatra.transformation.evm.tests/pom.xml
@@ -11,6 +11,11 @@
     </parent>
     <artifactId>org.eclipse.viatra.transformation.evm.tests</artifactId>
     <packaging>eclipse-test-plugin</packaging>
+    <properties>
+        <!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=397015 -->
+	    <sonar.sources></sonar.sources>
+	    <sonar.tests>test</sonar.tests>
+    </properties>
     <build>
        <plugins>
             <plugin>
