--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
@@ -14,6 +14,9 @@
 	<properties>
 		<vmargs>${tycho.testArgLine} -Xmx1024m</vmargs>
 		<emf.workspace.location>${project.basedir}/../../target/workspace</emf.workspace.location>
+		<!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=397015 -->
+        <sonar.sources></sonar.sources>
+        <sonar.tests>src,src-gen,emf-gen,xtend-gen</sonar.tests>
 	</properties>
 	<build>
 		<plugins>
