--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.ui.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.ui.tests/pom.xml
@@ -13,6 +13,9 @@
 	<packaging>eclipse-test-plugin</packaging>
 	<properties>
 		<vmargs>${tycho.testArgLine} -Xmx1024m</vmargs>
+		<!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=397015 -->
+        <sonar.sources></sonar.sources>
+        <sonar.tests>src,src-gen,xtend-gen</sonar.tests>
 	</properties>
 	<build>
 		<plugins>
