--- a/query/tests/org.eclipse.viatra.query.runtime.cps.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.runtime.cps.tests/pom.xml
@@ -11,6 +11,11 @@
 	</parent>
 	<artifactId>org.eclipse.viatra.query.runtime.cps.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
+	<properties>
+	   <!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=397015 -->
+	    <sonar.sources></sonar.sources>
+	    <sonar.tests>src,src-gen,xtend-gen</sonar.tests>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
