--- a/query/plugins/org.eclipse.viatra.query.runtime.rete/build.properties
+++ b/query/plugins/org.eclipse.viatra.query.runtime.rete/build.properties
@@ -3,5 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                build.properties,\
-               about.html
+               about.html,\
+               plugin.xml
 src.includes = about.html
