--- a/query/plugins/org.eclipse.viatra.query.runtime/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.runtime/plugin.xml
@@ -3,4 +3,5 @@
 <plugin>
    <extension-point id="queryspecification" name="VIATRA Pattern Matcher" schema="schema/patternmatcher.exsd"/>
    <extension-point id="surrogatequeryemf" name="VIATRA Surrogate Query" schema="schema/surrogatequeryemf.exsd"/>
+   <extension-point id="querybackend" name="Query Backend" schema="schema/querybackend.exsd"/>
 </plugin>
