--- a/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries.validation/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries.validation/pom.xml
@@ -10,4 +10,9 @@
 	</parent>
     <artifactId>org.eclipse.viatra.query.rcptt.queries.validation</artifactId>
     <packaging>eclipse-plugin</packaging>
+    <properties>
+        <!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=397015 -->
+        <sonar.sources></sonar.sources>
+        <sonar.tests>src,src-gen</sonar.tests>
+    </properties>
 </project>
