--- a/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries/pom.xml
@@ -10,6 +10,11 @@
 	</parent>
     <artifactId>org.eclipse.viatra.query.rcptt.queries</artifactId>
     <packaging>eclipse-plugin</packaging>
+    <properties>
+        <!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=397015 -->
+        <sonar.sources></sonar.sources>
+        <sonar.tests>src,src-gen</sonar.tests>
+    </properties>
     <build>
         <plugins>
             <plugin>
