Fixing a sonar compile error

--- a/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries.validation/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries.validation/pom.xml
@@ -13,6 +13,6 @@
     <properties>
         <!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=397015 -->
         <sonar.sources></sonar.sources>
-        <sonar.tests>src,src-gen</sonar.tests>
+        <sonar.tests>src-gen</sonar.tests>
     </properties>
 </project>
