[530883] Fixes issues related to embedded pattern handling
This change extends the embedded pattern handling in the following ways:

 1. It explicitly documents some requirements for embedded patterns,
notably disallowing disjunctions and recursion.
 2. Provides a warning in case of aggregators are used on a path
expression chain - the goal of this is to note that such an aggregation
will almost never return what is expected if there is a chance for
duplicate paths.

Change-Id: I18935fb6c5f82b537b4f20619ecdfe5ef364688f
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/build.properties
+++ b/documentation/org.eclipse.viatra.documentation.help/build.properties
@@ -4,7 +4,9 @@ bin.includes = META-INF/,\
                viatra.toc.xml,\
                org.eclipse.viatra.documentation.help.contexts.xml,\
                build.properties,\
-               about.html
+               about.html,\
+               html/language/usagecounting.html,\
+               html/language/whitelist.html
 src.includes = about.html
 bin.excludes = html/cps/images/raw/,\
                html/cps/asciidoctor.css,\
