[509925] Updates migrator for 2.0 release
This release updates the migrator to make sure it is still useful for
working with VIATRA projects. The main changes in this case:

 * It was ensured that a common PDE plug-in project can be converted to
a VIATRA Query project. This required adding dependencies, setting the
singleton directive and project natures.
 * A new UI test was added that initializes a new PDE plug-in project
than converts it into a VIATRA Query Project.

Change-Id: I1ea428b422a89f8a11267ea916b3f08375cc218d
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.tooling.migrator/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.migrator/plugin.xml
@@ -115,7 +115,7 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="org.eclipse.viatra.migrator.metadata.ProjectNatureUpdater"
+            class="org.eclipse.viatra.query.patternlanguage.emf.ui.ReusablePatternLanguageExecutableExtensionFactory:org.eclipse.viatra.migrator.metadata.ProjectNatureUpdater"
             commandId="org.eclipse.viatra.query.tooling.migrator.metadata.command">
       </handler>
       <handler
