--- a/documentation/org.eclipse.viatra.documentation.help/build.properties
+++ b/documentation/org.eclipse.viatra.documentation.help/build.properties
@@ -8,14 +8,11 @@ bin.includes = META-INF/,\
                html/language/usagecounting.html,\
                html/language/whitelist.html
 src.includes = about.html
-bin.excludes = html/cps/images/raw/,\
-               html/cps/asciidoctor.css,\
-               html/cps/coderay-asciidoctor.css,\
+bin.excludes = html/cps/asciidoctor.css,\
                html/.gitignore,\
                html/basic-theme.yml,\
                html/extra/,\
                html/releases/,\
                html/tutorial/,\
-               html/runtime/,\
                html/language/,\
                html/addons/
