--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -13,6 +13,7 @@
         <module>../org.eclipse.viatra.parent.incubation.maven</module>
         
         <!-- Query -->
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius</module>
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
         <module>../../query/features/org.eclipse.viatra.query.sdk.extensions.feature</module>
