--- a/maven/viatra-query-runtime/pom.xml
+++ b/maven/viatra-query-runtime/pom.xml
@@ -92,15 +92,15 @@
             <version>[14.0,19.0)</version>
         </dependency>
         <dependency>
-			<groupId>org.eclipse.collections</groupId>
-			<artifactId>eclipse-collections</artifactId>
-			<version>9.2.0.M1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.collections</groupId>
-			<artifactId>eclipse-collections-api</artifactId>
-			<version>9.2.0.M1</version>
-		</dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections</artifactId>
+            <version>9.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
+            <version>9.2.0</version>
+        </dependency>
     </dependencies>
     <parent>
         <artifactId>org.eclipse.viatra.parent.core</artifactId>
