[498747] Adds a generator to the graphical editor
Additionally contains some test

Change-Id: I6a2d1844f1347bccd1ee085c2fe7e4ea2b9b6a6c
Signed-off-by: Mocsai Krisztian <krisztian.mocsai@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel/build.properties
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel/build.properties
@@ -14,5 +14,7 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = emf-gen/
+source.. = emf-gen/,\
+           src/,\
+           xtend-gen/
 output.. = bin/
