--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -17,6 +17,7 @@
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
         <module>../../query/features/org.eclipse.viatra.query.sdk.extensions.feature</module>
+        <module>../../query/tests/org.eclipse.viatra.query.patternlanguage.metamodel.vql.generator.test</module>
         
         <!-- Transformations -->
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.tooling.debug</module>
