[536914] Ensures conflict resolvers do not leak internal collections
When internal collections are leaked, end-user code might not be ready
for such changes. E.g. when all current activations are fired, in case
of conflicts without such defensive copying
ConcurrentModificationExceptions might be thrown.

Most conflict resolvers were already hardened against this usage; and
all ensured that end-user code is not allowed to modify these sets. This
means, explicitly documenting (and enforcing) these requirements for all
conflict resolvers is a safe option to take.

Change-Id: I2944b778f3616ada1aa6e958041fec064f533025
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -41,6 +41,7 @@
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.ui</module>
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.evm.transactions</module>
 		<module>../../transformation/tests/org.eclipse.viatra.transformation.evm.tests</module>
+		<module>../../transformation/tests/org.eclipse.viatra.transformation.runtime.emf.tests</module>
 		<module>../../transformation/features/org.eclipse.viatra.transformation.runtime.emf.feature</module>
 		<module>../../transformation/features/org.eclipse.viatra.transformation.evm.transactions.feature</module>
 
