--- a/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
+++ b/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
@@ -64,6 +64,12 @@
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.allDependencies"/>
     </group>
   </extension>
+  <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.ErrorHandling" point="org.eclipse.viatra.query.runtime.queryspecification">
+    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.ErrorHandling" id="org.eclipse.viatra.query.runtime.cps.tests.queries.ErrorHandling">
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.evalDivisionByZero"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.checkDivisionByZero"/>
+    </group>
+  </extension>
   <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.FlattenedPatternCall" point="org.eclipse.viatra.query.runtime.queryspecification">
     <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.FlattenedPatternCall" id="org.eclipse.viatra.query.runtime.cps.tests.queries.FlattenedPatternCall">
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.called"/>
@@ -94,6 +100,17 @@
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.runningAppInstances"/>
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.longValueConstant"/>
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.longValueConstantWithCheck"/>
+    </group>
+  </extension>
+  <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.LocalsearchPlannerTests" point="org.eclipse.viatra.query.runtime.queryspecification">
+    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.LocalsearchPlannerTests" id="org.eclipse.viatra.query.runtime.cps.tests.queries.LocalsearchPlannerTests">
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.partiallyUnboundUnifiedExportedParameters"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.multipleExportedSame"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.multiInstanceTypes"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.unifiedParametersWithDifferentValues2"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.unifiedParametersWithDifferentValues"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.multipleEvals"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.useVarInEval"/>
     </group>
   </extension>
   <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.OtherTests" point="org.eclipse.viatra.query.runtime.queryspecification">
@@ -181,6 +198,23 @@
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.notOneInstance"/>
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.cartesianProduct"/>
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.argumentsUnifiedByCaller"/>
+    </group>
+  </extension>
+  <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.api.BackendSelectionQueries" point="org.eclipse.viatra.query.runtime.queryspecification">
+    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.api.BackendSelectionQueries" id="org.eclipse.viatra.query.runtime.cps.tests.queries.api.BackendSelectionQueries">
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.api.defaultBackend"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.api.searchBackend"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.api.incrementalBackend"/>
+    </group>
+  </extension>
+  <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.flattenerpredicate.FlattenerPredicateQueries" point="org.eclipse.viatra.query.runtime.queryspecification">
+    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.flattenerpredicate.FlattenerPredicateQueries" id="org.eclipse.viatra.query.runtime.cps.tests.queries.flattenerpredicate.FlattenerPredicateQueries">
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.flattenerpredicate.called_d"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.flattenerpredicate.callee_d"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.flattenerpredicate.called_s"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.flattenerpredicate.callee_s"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.flattenerpredicate.called_i"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.flattenerpredicate.callee_i"/>
     </group>
   </extension>
   <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.resolveordering.A_third" point="org.eclipse.viatra.query.runtime.queryspecification">
