--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
@@ -31,4 +31,28 @@
                <parameter name="guicekey" value="org.eclipse.viatra.query.patternlanguage.emf.sirius.builder.GraphicalQueryProjectBuilder"/>
          </run></builder>
    </extension>
+  <extension
+        point="org.eclipse.ui.handlers">
+     <handler
+            class="org.eclipse.viatra.query.patternlanguage.emf.sirius.handlers.LoadVgqlPatternHandler"
+            commandId="org.eclipse.viatra.query.tooling.ui.result.loadvqlqueries">
+         <activeWhen>
+            <with
+                variable="activeEditorId">
+               <equals
+                     value="org.eclipse.sirius.diagram.ui.part.SiriusDiagramEditorID">
+               </equals>
+            </with>
+         </activeWhen>
+         <enabledWhen>
+            <with
+                  variable="activeEditor">
+               <test
+                     property="org.eclipse.viatra.query.tooling.ui.browser.result.activeengine">
+               </test>
+            </with>
+         </enabledWhen>
+      </handler>
+  </extension>
+   
 </plugin>
