Adds back mistakenly removed genmodel from EMF models
Change-Id: I90bddc961dbb30c4e3c42ef7b7749161a1d1ca48
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.runtime.rete.recipes/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.runtime.rete.recipes/plugin.xml
@@ -10,6 +10,7 @@
       <!-- @generated rete-recipes -->
       <package
             uri="http://www.eclipse.org/viatra/query/rete/recipes"
+            genModel="model/rete-recipes.genmodel"
             class="org.eclipse.viatra.query.runtime.rete.recipes.RecipesPackage"/>
    </extension>
 
