[498747] Adds support for sirius editor to validate vgql
The following errors and warnings are included this commit with a few
examples that will form the basis of some tests:

Errors:
* Parameter does not have exactly one type.
* PathExpression missing type declaration
* PathExpression has multiple types
	This is temporary, in the future it will not be a problem, but
	with Viatra validation it has problem with order of the types.
* Type does not conform to other type


Warnings:
* Declared type is less specific then the type inferred from bodies
* The type inferred from bodies is less specific then Declared type

Change-Id: Ic2930c0f70890bf755f6b4eedbf56851896229a0
Signed-off-by: Mocsai Krisztian <krisztian.mocsai@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -16,6 +16,8 @@
         <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius</module>
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.queries</module>
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.queries.validation</module>
         <module>../../query/features/org.eclipse.viatra.query.sdk.extensions.feature</module>
         <module>../../query/tests/org.eclipse.viatra.query.patternlanguage.metamodel.vql.generator.test</module>
         
