[498747] Supports starting VIATRA validation
Given Sirius-based editors work on transactional editing domains, it is
necessary to start VIATRA validation in a read-only transaction,
otherwise it may throw exceptions during intialization.

Furthermore, to support finding marker sources, it was necessary to use
a customized marker manager, thus providing specialized loading.
Change-Id: I3d6b8d67f6876f9723b052baad77d68ae56a4b1c
Signed-off-by: Mocsai Krisztian <krisztian.mocsai@incquerylabs.com>
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
@@ -53,6 +53,18 @@
             </with>
          </enabledWhen>
       </handler>
+     <handler
+           class="org.eclipse.viatra.query.patternlanguage.emf.sirius.handlers.InitValidatorsWithWriteTransaction"
+           commandId="org.eclipse.viatra.addon.validation.runtime.ui.initValidatorsOnEditor">
+        <activeWhen>
+           <with
+                 variable="activePartId">
+              <equals
+                    value="org.eclipse.sirius.diagram.ui.part.SiriusDiagramEditorID">
+              </equals>
+           </with>
+        </activeWhen>
+     </handler>
   </extension>
    
 </plugin>
