[498747] expands Sirius editor functionality
* EClassifier splitted to EClass and EDataType
* Parameter delete command fixed
* Expression delete command added
* Reference can added from palette

Change-Id: I8060c19f4cfb93670702c833faf8de45468a716a
Signed-off-by: Mocsai Krisztian <krisztian.mocsai@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
@@ -66,5 +66,11 @@
         </activeWhen>
      </handler>
   </extension>
+  <extension
+        point="org.eclipse.sirius.ui.editor.sessionEditorPageProvider">
+     <pageProvider
+           class="org.eclipse.viatra.query.patternlanguage.emf.sirius.util.VGQLSessionPageProvider">
+     </pageProvider>
+  </extension>
    
 </plugin>
