[538157] Updates tutorial with new code generator
Change-Id: I50677b3ea0a77087eadbc5efa67094d5e85cf603
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.example/plugin.xml
+++ b/documentation/org.eclipse.viatra.documentation.example/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><plugin>
-  <extension id="org.eclipse.viatra.documentation.example.queries.TutorialQueries" point="org.eclipse.viatra.query.runtime.queryspecification">
-    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.documentation.example.queries.TutorialQueries" id="org.eclipse.viatra.documentation.example.queries.TutorialQueries">
+  <extension id="org.eclipse.viatra.documentation.example.queries.CPSQueries" point="org.eclipse.viatra.query.runtime.queryspecification">
+    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.documentation.example.queries.CPSQueries" id="org.eclipse.viatra.documentation.example.queries.CPSQueries">
       <query-specification fqn="org.eclipse.viatra.documentation.example.queries.hostIpAddress"/>
       <query-specification fqn="org.eclipse.viatra.documentation.example.queries.emptyIpAddress"/>
       <query-specification fqn="org.eclipse.viatra.documentation.example.queries.sameIpAddress"/>
