[498747] Updates Sirius repository urls
Because Sirius has removed the neon-compatible p2 repository for Sirius
6.0, the merged builds have failed. This change adds updates the
repository declarations in the target platform definitions and the Oomph
setup.

Change-Id: I2e2bcb6a43994b5829ed660fd8565cc23261ba62
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/pom.xml
@@ -11,6 +11,6 @@
   <artifactId>org.eclipse.viatra.query.patternlanguage.emf.sirius</artifactId>
   <packaging>eclipse-plugin</packaging>
   <properties>
-    <target.classifier>neon</target.classifier>
+    <target.classifier>oxygen</target.classifier>
   </properties>
 </project>
