[498747] Includes the VGQL editor in the main VIATRA repository
This required several changes to make it consistent:
 1. Metamodel projects were reversioned to 0.21.0
 2. A dedicated VGQL feature project was created and added to the
category.xml of the repository
 3. VQL generator was added to the metamodel.queries project
 4. Generated code for the validation framework is added to the
repository as the generator does not work.

Change-Id: Id807079f0faa73b1d432c7654518c6bd81f0fda8
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -13,11 +13,14 @@
         <module>../org.eclipse.viatra.parent.incubation.maven</module>
         
         <!-- Query -->
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel</module>
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.edit</module>
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.queries</module>
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.queries.validation</module>
         <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius</module>
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
-        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.queries</module>
-        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.queries.validation</module>
+        <module>../../query/features/org.eclipse.viatra.query.language.vgql.feature</module>
         <module>../../query/features/org.eclipse.viatra.query.sdk.extensions.feature</module>
         <module>../../query/tests/org.eclipse.viatra.query.patternlanguage.metamodel.vql.generator.test</module>
         
