--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel/pom.xml
@@ -4,10 +4,10 @@
     xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>org.eclipse.viatra.parent.core</artifactId>
+        <artifactId>org.eclipse.viatra.parent.incubation</artifactId>
         <groupId>org.eclipse.viatra</groupId>
-        <version>2.1.0-SNAPSHOT</version>
-        <relativePath>../../../releng/org.eclipse.viatra.parent.core/pom.xml</relativePath>
+        <version>0.21.0-SNAPSHOT</version>
+        <relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
     </parent>
 	<artifactId>org.eclipse.viatra.query.patternlanguage.metamodel</artifactId>
 	<packaging>eclipse-plugin</packaging>
