--- a/releng/org.eclipse.viatra.update/pom.xml
+++ b/releng/org.eclipse.viatra.update/pom.xml
@@ -11,6 +11,9 @@
     </parent>
     <artifactId>org.eclipse.viatra.update</artifactId>
     <packaging>eclipse-repository</packaging>
+    <properties>
+        <target.classifier>oxygen</target.classifier>
+    </properties>
     <build>
         <plugins>
             <plugin>
