[498747] Updates the VGQL metamodel and VQL code generator
This change simplifies the graphical editing of patterns in a few corner
cases by avoiding explicitly specifying unused variables for pattern
calls, replace index-based pattern call parameterization with a
name-based one, and makes it easier to reuse complex expressions such as
function evaluations and aggregated values.

A new CalledParameter EClass was introduced in the metamodel, that is a
specialized Reference class connected to a Parameter of a called
pattern. In such references, if no corresponding local expression is
selected, the generator inserts an unnamed variables ('_') to the calls.

The generator creates for each FunctionEvaluationValue and
AggregatedValue a dedicated variable, making it unnecessary to
explicitly create them in the graphical syntax when the same call needs
to be used multiple times in the same body.

On a related note, the "Assign call parameter" Edge creation removed
from the palette, as it could be replaced by the more general "Add
Reference" tool.


Change-Id: I8869a28ddbae045977a4aad81d572eec5e20cd6d
Signed-off-by: Mocsai Krisztian <krisztian.mocsai@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.edit/plugin.properties
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.edit/plugin.properties
@@ -142,3 +142,12 @@ _UI_Variable_types_feature = Types
 _UI_InterpretableExpression_type = Interpretable Expression
 _UI_InterpretableExpression_expression_feature = Expression
 _UI_InterpretableExpression_variables_feature = Variables
+_UI_ParameterCall_type = Parameter Call
+_UI_ParameterCall_reference_feature = Reference
+_UI_ParameterCall_calledParameter_feature = Called Parameter
+_UI_ParameterCall_expression_feature = Expression
+_UI_AggregatedValue_name_feature = Name
+_UI_FunctionEvaluationValue_evaluatedValue_feature = Evaluated Value
+_UI_AggregatedValue_aggregatedValue_feature = Aggregated Value
+_UI_CalledParameter_type = Called Parameter
+_UI_CalledParameter_calledParameter_feature = Called Parameter
