--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
@@ -19,6 +19,15 @@
             preferredPerspectives="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective,org.eclipse.pde.ui.PDEPerspective,org.eclipse.jdt.ui.JavaPerspective"
             project="true">
       </wizard>
+        <wizard
+              category="org.eclipse.viatra.query.tooling.ui.category"
+              class="org.eclipse.viatra.query.patternlanguage.emf.sirius.wizard.NewVgqlFileWizard"
+              finalPerspective="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective"
+              icon="platform:/plugin/org.eclipse.viatra.query.tooling.ui/icons/logo2.png"
+              id="org.eclipse.viatra.query.patternlanguage.emf.sirius.newvgqlwizard"
+              name="Graphical Query Definition"
+              project="false">
+        </wizard>
   </extension>
   <extension
          id="vgqlbuilder"
@@ -65,12 +74,6 @@
            </with>
         </activeWhen>
      </handler>
-  </extension>
-  <extension
-        point="org.eclipse.sirius.ui.editor.sessionEditorPageProvider">
-     <pageProvider
-           class="org.eclipse.viatra.query.patternlanguage.emf.sirius.util.VGQLSessionPageProvider">
-     </pageProvider>
   </extension>
    
 </plugin>
