[539174] Remove support for path expression chains from VGQL models
Change-Id: I448e8b3d12de4a2a4f8a549ee054c2dfd79da44f
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.edit/plugin.properties
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.edit/plugin.properties
@@ -79,7 +79,7 @@ _UI_CompareConstraint_leftOperand_feature = Left Operand
 _UI_CompareConstraint_feature_feature = Feature
 _UI_CompareConstraint_rightOperand_feature = Right Operand
 _UI_CheckConstraint_expression_feature = Expression
-_UI_PathExpressionConstraint_edgeTypes_feature = Edge Types
+_UI_PathExpressionConstraint_edgeType_feature = Edge Type
 _UI_PathExpressionConstraint_sourceType_feature = Source Type
 _UI_PathExpressionConstraint_src_feature = Src
 _UI_PathExpressionConstraint_dst_feature = Dst
