--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -18,6 +18,8 @@
         <module>../../query/plugins/org.eclipse.viatra.query.runtime.localsearch</module>
         <module>../../query/plugins/org.eclipse.viatra.query.runtime.rete</module>
         <module>../../query/plugins/org.eclipse.viatra.query.runtime.rete.recipes</module>
+        <module>../../query/tests/org.eclipse.viatra.query.testing.snapshot</module>
+        <module>../../query/tests/org.eclipse.viatra.query.testing.core</module>
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.evm</module>
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.runtime.emf</module>
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.views</module>
@@ -39,6 +41,7 @@
         <module>../../maven/viatra-querybasedfeatures</module>
         <module>../../maven/viatra-transformation-runtime</module>
         <module>../../maven/viatra-maven-plugin</module>
+        <module>../../maven/viatra-query-testing</module>
     </modules>
     <parent>
         <groupId>org.eclipse.viatra</groupId>
