--- a/query/tests/org.eclipse.viatra.query.testing.core/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.testing.core/pom.xml
@@ -4,7 +4,7 @@
     xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>org.eclipse.viatra.parent.all</artifactId>
+        <artifactId>org.eclipse.viatra.parent.core</artifactId>
         <groupId>org.eclipse.viatra</groupId>
         <version>2.1.0-SNAPSHOT</version>
         <relativePath>../../../releng/org.eclipse.viatra.parent.core/pom.xml</relativePath>
